# monkey_backup

./: CImg.h  CMakeLists.txt  asset_manager.cpp  asset_manager.h  bounds.cpp  bounds.h  camera.cpp  camera.h  collision.h  component.cpp  component.h  config.out  engine.cpp  engine.h  error.h  event.h  font.cpp  font.h  graph.h  hashpair.h  jointtransform.cpp  jointtransform.h  keyboard.cpp  keyboard.h  keylistener.cpp  keylistener.h  light.cpp  light.h  main.cpp  model.cpp  model.h  modelmake.cpp  modelmake.h  mouselistener.cpp  mouselistener.h  node.cpp  node.h  palette.cpp  palette.h  pyfunc.cpp  (+21 more)
components/: attack.cpp  attack.h  autowalk2d.cpp  car2d.cpp  car2d.h  cleardepthbuffer.cpp  cleardepthbuffer.h  collider.cpp  collider.h  contourcollider.cpp  contourcollider.h  controller.cpp  controller.h  controller3d.cpp  controller3d.h  depth.cpp  depth.h  dynamics.h  foechase.cpp  foechase.h  foewalk2d.cpp  foewalk2d.h  follow.cpp  follow.h  hit.cpp  hit.h  hotspot.cpp  hotspot.h  hotspotmanager.cpp  hotspotmanager.h  idle.cpp  idle.h  inputtext.cpp  inputtext.h  jumpattack.h  keyboard.cpp  keyboard.h  keypad.cpp  keypad.h  move.cpp  (+21 more)
models/: image.cpp  image.h  multi.cpp  multi.h  plane.cpp  plane.h  polymesh.cpp  polymesh.h  rawmodel.cpp  rawmodel.h  shapes.cpp  shapes.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h  text.cpp  text.h  tiled.cpp  tiled.h
runners/: actions.cpp  actions.h  break.cpp  break.h  collisionengine.cpp  collisionengine.h  collisionresponse.cpp  collisionresponse.h  say.cpp  say.h  scheduler.cpp  scheduler.h  walk.cpp  walk.h
shaders/: blit.fs  blit.vs  color.fs  color.vs  shaders.h  skeletal.fs  skeletal.vs  tex.fs  tex.vs  texlight.fs  texlight.vs  (+1 more)
(+63 files in other folders)
